force-app/main/default/objects/Product_line_Detail__c/Product_line_Detail__c.object-meta.xml
<CustomObject>
    <label>Product line Detail</label>
    <nameField>
        <label>Product line Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product line Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>