force-app/main/default/objects/Product_line_Detail__c/fields/Display_Standard__c.field-meta.xml
<CustomField>
    <fullName>Display_Standard__c</fullName>
    <label>Display Standard</label>
    <type>Url</type>
</CustomField>