force-app/main/default/objects/Product_line_Detail__c/fields/Product_line_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_line_Description__c</fullName>
    <label>Product line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>