force-app/main/default/objects/Product_line_Detail__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <label>Reminder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>